Add semantic tags for testimonial card

--- a/index.html
+++ b/index.html
@@ -14,11 +14,27 @@
     <link rel="icon" href="img/favicon.ico" sizes="any" />
   </head>
   <body>
-    <!-- Sarah Dole
-      @sarahdole
-      I've been searching for high-quality abstract images for my design projects, 
-      and I'm thrilled to have found this platform. The variety and depth of creativity are astounding! 
-    -->
+    <div class="testimonial-card">
+      <figure class="author-info">
+        <img
+          src="./img/profile-thumbnail.png"
+          alt="Sara Dole"
+          class="author-image"
+          width="50px"
+          height="50px"
+        />
+        <figcaption>
+          <cite class="author-name">Sarah Dole</cite>
+          <span class="author-username">@sarahdole</span>
+        </figcaption>
+      </figure>
+
+      <p>
+        I've been searching for high-quality abstract images for my design
+        projects, and I'm thrilled to have found this platform. The variety and
+        depth of creativity are astounding!
+      </p>
+    </div>
 
     <div class="credits" data-gfe-screenshot-exclude="true">
       A challenge by
